------------------------------------------------------------------------------
sux0r 2.0.x
------------------------------------------------------------------------------

Changed link_table_ naming convention to: link__table__

------------------------------------------------------------------------------
sux0r 2.0.5
------------------------------------------------------------------------------

Fixed a rare infinite redirect problem

Fixed a bug with bookmarks menu

Added log buttons in user administration menu

Optimized: don't call suxNaiveBayesian destructor unless logged-in

Fixed bug #2754647: Can't Edit Un-approved Feed

Migrated captcha from jpGraph to Securimage

Removed symbiont jpGraph. It was taking too much space and was not being used.

Updated symbionts: htmLawed 1.1.8, TinyMCE 3.2.3

------------------------------------------------------------------------------
sux0r 2.0.4
------------------------------------------------------------------------------

Changed license from AGPL to GPL

Refactarded all up in the code

Added JavaScript menus

Fixed a bug that was preventing login using WAMP

Fixed a search highlighting bug

Fixed a bug where Smarty would crash if an apostraphe was in $title of widget()

Removed redundant security checks from several modules.

Added the ability to permanently delete a user

Updated symbionts: htmLawed 1.1.7.2

------------------------------------------------------------------------------
sux0r 2.0.3
------------------------------------------------------------------------------

Fallback to cURL if allow_url_fopen is disabled.

HTTP Authorization fix when using PHP in CGI mode

Moved inline HTML in suxRenderer() to various templates

Updated symbionts: htmLawed 1.1.6, JpGraph 2.3.4

------------------------------------------------------------------------------
sux0r 2.0.2
------------------------------------------------------------------------------

General bugfixes and optimizations
