@@ -1,0 +1,39 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['access'] = 'Accesso';
+$gtext['activity_log'] = 'Log delle Attività';
+$gtext['alert_delete'] = 'Sicuri di voler eliminare l\'utente? Verranno cancellati anche tutti i suoi contenuti.';
+$gtext['admin'] = 'Amministrazione';
+$gtext['admin_blog'] = 'Amministrazione del Blog';
+$gtext['admin_bookmarks'] = 'Amministrazione dei Preferiti';
+$gtext['admin_feeds'] = 'Amministrazione dei Feed';
+$gtext['admin_photos'] = 'Amministrazione delle Immagini';
+$gtext['admin_purge'] = 'Svuota i log';
+$gtext['alert_purge'] = 'Sei sicuro di voler svuotare i log?';
+$gtext['back_2'] = 'Torna alla Homepage';
+$gtext['back'] = 'Torna all\'Amministrzione';
+$gtext['banned'] = 'Bannato';
+$gtext['cancel'] = 'Annulla';
+$gtext['date'] = 'Data';
+$gtext['delete'] = 'Elimina';
+$gtext['edit_access'] = 'Modifica Accesso';
+$gtext['edit'] = 'Modifica';
+$gtext['error_1'] = 'Data non valida';
+$gtext['form_error'] = 'Non è stato possibile inviare la form, controllare gli errori';
+$gtext['form_problem'] = 'Non è stato possibile inviare la form, riprovate per favore';
+$gtext['last_active'] = 'Ultimo Attivo ##FIX##';
+$gtext['log'] = 'Log';
+$gtext['nickname'] = 'Nick';
+$gtext['private'] = 'Privato';
+$gtext['profile'] = 'Profilo';
+$gtext['root'] = 'Root';
+$gtext['submit'] = 'Invia';
+$gtext['success2'] = 'Sembra tutto a posto.';
+$gtext['success'] = 'Fatto!';
+$gtext['timestamp'] = 'Timestamp ##FIX##';
+$gtext['yourself'] = 'Stai editando la tua pagina, alcune opzioni sono disabilitate per sicurezza';
+
+?>
