@@ -1,0 +1,71 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['add'] = 'Aggiungi';
+$gtext['add_doc'] = 'Impara dal documento';
+$gtext['alert_cat'] = 'Cancellare questa categoria?';
+$gtext['alert_doc'] = 'Cancellare questo documento?';
+$gtext['alert_unshare'] = 'Rimuovere la condivisione di questi vettori?';
+$gtext['alert_vec'] = 'Eliminare questo vettore?';
+$gtext['back_2'] = 'Torna al profilo';
+$gtext['back'] = 'Indietro';
+$gtext['cat_doc'] = 'Categorizza documento';
+$gtext['categories'] = 'Categorie';
+$gtext['categorize'] = 'Categorizza';
+$gtext['categorized_on'] = 'Categorizzato in';
+$gtext['delete'] = 'Elimina';
+$gtext['documents'] = 'Documenti';
+$gtext['edit_bayes'] = 'Modifica le categorie Bayesiane';
+$gtext['error'] = 'Errore';
+$gtext['filter1'] = 'Filtra per Migliori'; # Check
+$gtext['filter2'] = 'Filtra per Soglia';   # Check
+$gtext['form_error_10'] = 'Impossibile condividere il Vettore con sé stessi';
+$gtext['form_error_11'] = 'L\'utente non esiste';
+$gtext['form_error_12'] = 'Non c\'è niente selezionato?'; # Check
+$gtext['form_error_1'] = 'Il Vettore non può essere vuoto';
+$gtext['form_error_2'] = 'La Categoria non può essere vuota';
+$gtext['form_error_3'] = 'Il Vettore non può essere vuoto';
+$gtext['form_error_4'] = 'La Categoria non può essere vuota';
+$gtext['form_error_5'] = 'Vettore troppo lungo';
+$gtext['form_error_6'] = 'Categoria troppo lunga';
+$gtext['form_error_7'] = 'Il Documento non può essere vuoto';
+$gtext['form_error_8'] = 'L\'utente non può essere vuoto';
+$gtext['form_error_9'] = 'Non valido';
+$gtext['form_error'] = 'Non è stato possibile inviare il form, controllare gli errori';
+$gtext['is_linked'] = 'Questo documento è collegato : '; # Check
+$gtext['is_not_linked'] = 'Questa categoria non è collegata'; # Check
+$gtext['new_cat'] = 'Nuova Categoria';
+$gtext['new_vec'] = 'Nuovo Vettore';
+$gtext['owner2'] = 'Proprietario? (Se selezionato, l\'utente può far imparare dal documento)';
+$gtext['owner'] = 'Proprietario';
+$gtext['remove_cat'] = 'Elimina Categoria';
+$gtext['remove_doc'] = 'Disimpara Documento';
+$gtext['remove_vec'] = 'Elimina Vettore';
+$gtext['scores'] = 'Punteggi';
+$gtext['search'] = 'Parole chiave';
+$gtext['share_category'] = 'Condivisa una Categoria con';
+$gtext['share'] = 'Condividi';
+$gtext['shared'] = 'Condiviso';
+$gtext['share_vec'] = 'Condividi Vettore';
+$gtext['stats'] = 'Statistiche';
+$gtext['synopsis_1'] = 'Un Vettore è una lista di Categorie. Devono esserci almeno 2 categorie per poter effettuare una <a href="http://en.wikipedia.org/wiki/Naive_Bayes_classifier">Classificazione Bayesiana</a>.';
+$gtext['synopsis_2'] = 'Per esempio in un vettore <strong>Stati d\'animo</strong> potremmo avere le categorie <strong>Felice</strong>, <strong>Triste</strong> e <strong>Arrabbiato</strong>. In un vettore <strong>Filtro</strong> potremmo avere <strong>Spam</strong> e <strong>Not-Spam</strong>.';
+$gtext['synopsis_3'] = 'D\'altra parte non mettereste dello <strong>Spam</strong> tra i <strong>Sentimenti</strong>, dato che non fa parte di quell\'insieme di categorie.';
+$gtext['synopsis_4'] = 'Per favore, tenete conto che andranno categorizzati <strong>centinaia di documenti</strong> in ogni categoria prima di vedere qualche risultato valido nell\'auto-categorizzazione.';
+$gtext['synopsis'] = 'In Breve';
+$gtext['threshold'] = 'Soglia';
+$gtext['to'] = 'a';
+$gtext['tokens'] = 'Token'; # Check
+$gtext['top'] = 'Torna in cima'; # Check
+$gtext['trainer'] = 'Permetti all\'utente di categorizzare i documenti?';
+$gtext['train'] = 'Impara';
+$gtext['unshare_category'] = 'Rimossa condivisione di una Categoria con';
+$gtext['unshare'] = 'Rimuovi Condivisione';
+$gtext['user'] = 'Utente';
+$gtext['vectors'] = 'Vettori';
+$gtext['vector'] = 'Vettore';
+$gtext['with'] = 'Con';
+
+?>
