@@ -1,0 +1,66 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['admin'] = 'Amministrazione del Blog';
+$gtext['alert_delete'] = 'Sicuro di voler eliminare questo Blog? Anche i commenti verranno eliminati.';
+$gtext['archives'] = 'Archivi';
+$gtext['author'] = 'Autore';
+$gtext['authors'] = 'Autori';
+$gtext['back'] = 'Torna al Blog';
+$gtext['bayes_categories'] = 'Categorie Bayesiane per Autore';
+$gtext['blog'] = 'Blog';
+$gtext['body'] = 'Corpo'; # Check
+$gtext['bookmarks'] = 'Segnalibri';
+$gtext['by'] = 'di'; # Check
+$gtext['cancel'] = 'Annulla';
+$gtext['category'] = 'Categoria';
+$gtext['click_to_crop'] = 'Clicca sull\'immagine per ritagliarla.';
+$gtext['comments'] = 'Commenti';
+$gtext['date'] = 'Data';
+$gtext['delete'] = 'Elimina';
+$gtext['draft'] = 'Bozza';
+$gtext['edit_2'] = 'Modifica Blog';
+$gtext['edit'] = 'Modifica';
+$gtext['error_1'] = 'Il Titolo non può essere vuoto';
+$gtext['error_2'] = 'Il Corpo non può essere vuoto';
+$gtext['error_3'] = 'Tipo di file non valido';
+$gtext['error_4'] = 'Il File è troppo grande';
+$gtext['error_5'] = 'Data non valida';
+$gtext['error_6'] = 'Timestamp non valido';
+$gtext['error_7'] = 'URL vuoto';
+$gtext['error_8'] = 'URL non valido';
+$gtext['extensions'] = 'Estensioni supportate';
+$gtext['form_error'] = 'Non è stato possibile inviare il form, controllare gli errori'; # Check
+$gtext['form_problem'] = 'Non è stato possibile inviare il form, si prega di riprovare'; # Check
+$gtext['header'] = 'Stiriamo i nostri pantaloni sull\'universo'; # Check
+$gtext['image'] = 'Immagine';
+$gtext['in'] = 'In'; # Check
+$gtext['linked_to'] = 'Collegato ai seguenti Documenti Bayes';
+$gtext['max_filesize'] = 'Dimensioni massime del file';
+$gtext['month'] = 'Mese';
+$gtext['new'] = 'Nuovo Blog';
+$gtext['no_comments'] = 'Nessun commento';
+$gtext['not_found'] = 'Non trovato';
+$gtext['on'] = 'On'; # Check
+$gtext['p_link'] = 'Permanent Link';
+$gtext['posted_blog'] = 'Pubblicato un nuovo Blog intitolato';
+$gtext['published'] = 'Pubblicato';
+$gtext['recent_comments'] = 'Commenti recenti';
+$gtext['replied_blog'] = 'Risposto ad un Blog intitolato';
+$gtext['reply'] = 'Rispondi'; # Check
+$gtext['save_draft'] = 'Salva come Bozza';
+$gtext['submit'] = 'Invia';
+$gtext['suggest_bookmarks'] = 'Suggerisci Preferiti';
+$gtext['tag_cloud'] = 'Tag cloud';
+$gtext['tags_2'] = 'Tags, delimitati da virgole';
+$gtext['tags'] = 'Tags';
+$gtext['tag'] = 'Tag';
+$gtext['thread'] = 'Thread';
+$gtext['time'] = 'Time'; # Check
+$gtext['title'] = 'Titolo';
+$gtext['unset_image'] = 'Rimuovi l\'immagine corrente';
+$gtext['url'] = 'URL';
+
+?>
