@@ -1,0 +1,54 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['admin'] = 'Amministrazione dei Segnalibri';
+$gtext['alert_delete'] = 'Sicuri di voler cancellare questi Segnalibri?';
+$gtext['approve_2'] = 'Approva';
+$gtext['approve'] = 'Approva Segnalibri';
+$gtext['back_2'] = 'Torna ai Segnalibri';
+$gtext['back'] = 'Indietro';
+$gtext['bayes_categories'] = 'Categorie Bayesiane';
+$gtext['body'] = 'Corpo ##FIX##';
+$gtext['bookmarks'] = 'Segnalibri';
+$gtext['cancel'] = 'Annulla';
+$gtext['date'] = 'Data';
+$gtext['delete'] = 'Elimina';
+$gtext['draft'] = 'Bozza';
+$gtext['edit_2'] = 'Modifica Segnalibro';
+$gtext['edit'] = 'Modifica';
+$gtext['form_error_1'] = 'L\'URL non può essere vuoto';
+$gtext['form_error_2'] = 'URL non valido';
+$gtext['form_error_3'] = 'URL duplicato';
+$gtext['form_error_4'] = 'L\'URL non sembra valido';
+$gtext['form_error_5'] = 'Il Titolo non può essere vuoto';
+$gtext['form_error_6'] = 'Il Corpo non può essere vuoto';
+$gtext['form_error_7'] = 'Data non valida';
+$gtext['form_error_8'] = 'Ora non valida';
+$gtext['form_error'] = 'La form non è stata inviata, verificare gli errori';
+$gtext['form_problem'] = 'La form non è stata inviata, si prega di riprovare';
+$gtext['header'] = 'Shamelessness thinly veiled as reciprocity'; # Check
+$gtext['my_bookmarks'] = 'I miei Segnalibri';
+$gtext['new'] = 'Nuovo Segnalibro';
+$gtext['none'] = 'Nessuno';
+$gtext['not_found'] = 'Non trovato';
+$gtext['nothing'] = 'Nulla da approvare';
+$gtext['published_on'] = 'Pubblicato su'; # Check
+$gtext['save_draft'] = 'Salva come Bozza';
+$gtext['sort_alpha'] = 'Ordina alfabeticamente';
+$gtext['sort_date'] = 'Ordina per data';
+$gtext['submit'] = 'Invia';
+$gtext['success2'] = 'Un amministratore esaminerà la tua proposta nei prossimi giorni.';
+$gtext['success'] = 'Successo!';
+$gtext['suggested'] = 'Proposto da';
+$gtext['suggest'] = 'Proponi un Segnalibro';
+$gtext['tag_cloud'] = 'Tag cloud';
+$gtext['tags_2'] = 'Tags, delimitati da virgole';
+$gtext['tags'] = 'Tags';
+$gtext['tag'] = 'Tag';
+$gtext['time'] = 'Ora';
+$gtext['title'] = 'Titolo';
+$gtext['url'] = 'URL';
+
+?>
