@@ -1,0 +1,15 @@
+<?php
+
+// Always UTF-8
+// Always uppercase the first word
+
+$gtext['cancel'] = 'Annulla';
+$gtext['cancelled'] = 'Annullato!';
+$gtext['crop_image'] = 'Ritaglia immagine';
+$gtext['form_error'] = 'Non è stato possibile inviare il form, controllare gli errori';
+$gtext['form_problem'] = 'Non è stato possibile inviare il form, riprovare per favore';
+$gtext['height'] = 'altezza';
+$gtext['submit'] = 'Invia';
+$gtext['width'] = 'larghezza';
+
+?>
