@@ -2,6 +2,8 @@
 sux0r 2.0.x
 ------------------------------------------------------------------------------
 
+Italian translation
+
 Changed link_table_ naming convention to: link__table__
 
 ------------------------------------------------------------------------------
